--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-/node_modules
+node_modules
+/build
+/.pnp
+.pnp.js
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.DS_Store
+.idea
+.vscode
