Enhance AliExpress scraper: add new names, implement cookie handling, and improve CSV export functionality. Update dependencies and README for new features including anti-captcha techniques and cookie export instructions.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.21.2",
     "inquirer": "^8.2.5",
     "puppeteer": "^21.6.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
