--- a/package.json
+++ b/package.json
@@ -2,27 +2,61 @@
   "name": "aliexpress-review-scraper",
   "version": "1.0.0",
   "description": "Web scraper for AliExpress product reviews",
-  "main": "server.js",
+  "main": "electron.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "concurrently \"npm run start:react\" \"npm run start:electron\"",
+    "start:react": "react-scripts start",
+    "start:electron": "wait-on http://localhost:3000 && electron .",
     "build": "react-scripts build",
+    "build:electron": "electron-builder",
+    "package": "npm run build && npm run build:electron",
     "dev": "react-scripts start",
-    "scrape": "node index.js"
+    "scrape": "node index.js",
+    "server": "node server.js"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "chalk": "^4.1.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "cors": "^2.8.5",
+    "electron": "^29.1.0",
+    "electron-builder": "^24.13.2",
+    "electron-is-dev": "^2.0.0",
     "express": "^4.21.2",
     "inquirer": "^8.2.5",
+    "lucide-react": "^0.358.0",
     "puppeteer": "^21.6.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "tailwind-merge": "^2.3.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.18",
+    "concurrently": "^8.2.2",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "wait-on": "^7.2.0"
+  },
+  "build": {
+    "appId": "com.aliexpress.reviews",
+    "productName": "AliExpress Review Scraper",
+    "files": [
+      "build/**/*",
+      "electron.js",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "browserslist": {
     "production": [
