--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build:electron": "electron-builder",
     "package": "npm run build && npm run build:electron",
     "dev": "react-scripts start",
-    "scrape": "node index.js",
-    "server": "node server.js"
+    "export-cookies": "node export-cookies.js"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -22,11 +21,9 @@
     "chalk": "^4.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cors": "^2.8.5",
     "electron": "^29.1.0",
     "electron-builder": "^24.13.2",
     "electron-is-dev": "^2.0.0",
-    "express": "^4.21.2",
     "inquirer": "^8.2.5",
     "lucide-react": "^0.358.0",
     "puppeteer": "^21.6.1",
